[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/tilesets/sci-fi_interior.tres" type="TileSet" id=1]
[ext_resource path="res://assets/images/objects/chair.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level0/Ship/Level0ShipInterior.gd" type="Script" id=3]
[ext_resource path="res://assets/images/objects/ship_window.png" type="Texture" id=4]
[ext_resource path="res://Levels/Level0/Ship/Navigation2D.gd" type="Script" id=5]
[ext_resource path="res://GUI/Dialog/DialogArea/DialogArea.gd" type="Script" id=6]
[ext_resource path="res://Characters/NPC/Robot/Robot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/BaseLevel.tscn" type="PackedScene" id=8]
[ext_resource path="res://GUI/Dialog/DialogArea/DialogArea.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.7733, 58.6806 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 475.685, 413, 165.158, 414.053, 162.132, 225.013, 865.174, 228.89, 545.159, 411.948, 538.843, 542.474, 475.685, 543.527, 860.949, 417.211 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 0, 4 ), PoolIntArray( 4, 3, 7 ) ]
outlines = [ PoolVector2Array( 865.174, 228.89, 860.949, 417.211, 545.159, 411.948, 538.843, 542.474, 475.685, 543.527, 475.685, 413, 165.158, 414.053, 162.132, 225.013 ) ]

[node name="Level0ShipInterior" instance=ExtResource( 8 )]
script = ExtResource( 3 )
level_name = "Space Ship"
level_num = 1

[node name="Ground" parent="Tiles" index="0"]
visible = false

[node name="Ship" type="TileMap" parent="Tiles" index="1"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 131072, 7, 0, 131073, 7, 0, 131074, 42, 0, 131075, 44, 0, 131076, 43, 0, 131077, 44, 0, 131078, 43, 0, 131079, 43, 0, 131080, 44, 0, 131081, 42, 0, 131082, 43, 0, 131083, 44, 0, 131084, 43, 0, 131085, 42, 0, 131086, 7, 0, 131087, 7, 0, 196608, 7, 0, 196609, 7, 0, 196610, 47, 0, 196611, 48, 0, 196612, 48, 0, 196613, 48, 0, 196614, 48, 0, 196615, 48, 0, 196616, 48, 0, 196617, 48, 0, 196618, 48, 0, 196619, 48, 0, 196620, 48, 0, 196621, 49, 0, 196622, 7, 0, 196623, 7, 0, 262144, 7, 0, 262145, 7, 0, 262146, 61, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 60, 0, 262151, 60, 0, 262152, 60, 0, 262153, 60, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 59, 0, 262158, 7, 0, 262159, 7, 0, 327680, 7, 0, 327681, 7, 0, 327682, 61, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 60, 0, 327687, 60, 0, 327688, 60, 0, 327689, 60, 0, 327690, 13, 0, 327691, 13, 0, 327692, 13, 0, 327693, 59, 0, 327694, 7, 0, 327695, 7, 0, 393216, 7, 0, 393217, 7, 0, 393218, 72, 0, 393219, 73, 0, 393220, 73, 0, 393221, 73, 0, 393222, 73, 0, 393223, 75, 0, 393224, 75, 0, 393225, 73, 0, 393226, 73, 0, 393227, 73, 0, 393228, 73, 0, 393229, 74, 0, 393230, 7, 0, 393231, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 1, 0, 458760, 1, 0, 458761, 7, 0, 458762, 7, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 7, 0, 458767, 7, 0, 524288, 7, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 7, 0, 524293, 7, 0, 524294, 7, 0, 524295, 7, 0, 524296, 7, 0, 524297, 7, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0 )

[node name="NPCs" parent="World" index="0"]
layer = 0

[node name="Robot" parent="World/NPCs" index="0" instance=ExtResource( 7 )]
position = Vector2( 602.043, 385.925 )

[node name="Player" parent="World" index="1"]
position = Vector2( 207.439, 372.967 )

[node name="Camera2D" parent="World/Player" index="4"]
limit_right = 1024
limit_bottom = 600

[node name="Window" type="Sprite" parent="World" index="2"]
position = Vector2( 511.967, 71.2088 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="JetChair" type="Sprite" parent="World" index="3"]
position = Vector2( 513.195, 229.587 )
texture = ExtResource( 2 )

[node name="Level0" type="Node2D" parent="Dialogs" index="0"]
visible = false

[node name="ShipInteriorReal" parent="Dialogs/Level0" index="0" instance=ExtResource( 9 )]
position = Vector2( -146.528, 380.989 )
dialog_text = [ [ "Welcome to the moon, Cadet.", "Why are we stopping?", "Ship's destination is Mars." ], [ "C'mon Bot, we had to make a pit stop for the ultimate travel snack." ], [ "Snacks?" ], [ "Indeed my metal friend!", "And nothing hits the spot during space travel like slim jims and moon cheese.", "It's my rocket fuel!" ], [ "Humans don't require rocket fuel for survival, Cadet." ], [ "It's rocket fuel for my soul, Bot." ], [ "What evidence has been procured that humans have souls?", "And that soul sustenance is slim jims and moon chee-" ], [ "Shut it!", "What are you, a recycled Feel-bot?", "I refuse to debate philosphy on an empty stomach.", "Onward to my precious slims!" ], [ "Don't forget hel-" ], [ "Hell?!", "Did you not just hear me?!", "No slims, no soul talk!", "Ship, open the side hatch. I always wanted my moon landing to be the hero entrance!", "Like in the old Avengers!" ], [ "But you nee-" ], [ "No butt!", "You're supposed to land on your knee, supposedly less painful.", "Well, here it goes.", "Moon, your hero is her-" ] ]
dialog_color = [ Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ) ]
names = [ "Bot", "Jet", "Bot", "Jet", "Bot", "Jet", "Bot", "Jet", "Bot", "Jet", "Bot", "Jet" ]

[node name="ShipInterior" type="Node2D" parent="Dialogs/Level0" index="1"]
position = Vector2( 601.123, 383.839 )
script = ExtResource( 6 )
dialog_text = [ [ "test" ] ]
dialog_color = [ Color( 0.247059, 0.215686, 0.403922, 1 ) ]
names = [ "Bot" ]
activate_player = false

[node name="Area2D" type="Area2D" parent="Dialogs/Level0/ShipInterior" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dialogs/Level0/ShipInterior/Area2D" index="0"]
shape = SubResource( 1 )

[node name="FirstAttempt" parent="Dialogs/Level0" index="2" instance=ExtResource( 9 )]
position = Vector2( 234.905, 393.354 )
delay_start = 1.0
dialog_text = [ [ "Oh, you were trying to tell me to put a helmet on...", "..." ], [ "..." ], [ "Anyway...", "Let's never speak of that ever again...", "...", "...onward!" ] ]
dialog_color = [ Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.247059, 0.215686, 0.403922, 1 ), Color( 0.541176, 0.309804, 0.309804, 1 ) ]
names = [ "Jet", "Bot", "Jet" ]

[node name="Level1" type="Node2D" parent="Dialogs" index="1"]

[node name="TravelToMars" parent="Dialogs/Level1" index="0" instance=ExtResource( 9 )]
position = Vector2( 513.685, 233.684 )
delay_start = 2.0
dialog_text = [ [ "This is what happened", "I'm an idiot", "I'm going to Mars" ], [ "Yes you are an idiot", "Good luck" ] ]
dialog_color = [ Color( 0.541176, 0.309804, 0.309804, 1 ), Color( 0.388235, 0.0862745, 0.47451, 1 ) ]
names = [ "Jet", "Lizz" ]

[node name="LevelEnd" parent="SceneChanges" index="0"]
position = Vector2( 514.787, 501.304 )
NEXT_SCENE = "res://Levels/Level0/Moon/Level0Intro-Moon.tscn"

[node name="ExitShip" type="Node2D" parent="Other" index="0"]

[node name="Navigation2D" type="Navigation2D" parent="Other/ExitShip" index="0"]
script = ExtResource( 5 )
character_speed = 200.0

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Other/ExitShip/Navigation2D" index="0"]
navpoly = SubResource( 2 )

[node name="ExitLocation" type="Position2D" parent="Other/ExitShip" index="1"]
position = Vector2( 514.358, 501.82 )

[node name="Positions" type="Node2D" parent="Other" index="1"]

[node name="JetChair" type="Position2D" parent="Other/Positions" index="0"]
position = Vector2( 514.423, 213.623 )

[node name="BotChair" type="Position2D" parent="Other/Positions" index="1"]
position = Vector2( 599.137, 228.359 )
[connection signal="body_entered" from="Dialogs/Level0/ShipInterior/Area2D" to="Dialogs/Level0/ShipInterior" method="_on_Area2D_body_entered"]

[editable path="World/Player"]
